fix: 🐛 fix the overflow img
make the imgs' width be 100% of containers

--- a/src/static/style/pages/blogPage.css
+++ b/src/static/style/pages/blogPage.css
@@ -15,3 +15,6 @@
     padding: 1.3rem;
     font-size: 1rem;
 }
+img{
+    width: 100%;
+}
